Update UI front end activity_transaction.xml by Zefa (22 Desember 2023, 10:28)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="indomie_red">#ed1b24</color>
     <color name="indomie_yellow">#FCF250</color>
     <color name="indomie_green">#4AA45B</color>
+    <color name="grey">#A4A4A4</color>
 </resources>
